tests/fixtures/invalid/round_bytes_none.py
# Cannot call round() with Bytes, None
x = round(b"hello", None)
